something wrong with the filter func.

--- a/src/components/buyProduct/BuyProduct.css
+++ b/src/components/buyProduct/BuyProduct.css
@@ -55,6 +55,10 @@
 
 }
 
+.ui.form .field #formDiscount>label{
+    color: #65023d;
+}
+
 #confirmOrder:hover{
     background: none;
     color:saddlebrown;
