--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -14,5 +14,20 @@
 
 #loginPage{
     height: 50vh;
-    padding: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 40px;
+}
+
+#intro{
+    font-size: 15px;
+    color: #604427;
+    width: 400px;
+    height: 80px;
+    border-radius: 20px;
+    border:1px solid  #de9c3f;
+    text-align: center;
+    padding-top: 20px;
 }
