--- a/src/components/dataTable/dataTable.css
+++ b/src/components/dataTable/dataTable.css
@@ -1,16 +1,28 @@
 #product-icon{
-    width: 150px;
-    height: 150px;
-     border:1px solid #f5cdab;
+    width: 200px;
+    height: 200px;
+    border:1px solid #f5cdab;
     border-radius: 20%;
     }
 
 #product-icon>img{
-    width: 150px;
+    width: 50%;
     height: auto;
 }
 
+.allProducts{
+    align-items: center;
+    gap:2px;
+}
 
+.pendingContainer{
+    padding-bottom: 5px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    border-bottom: 1px solid rgba(185, 150, 103, 0.73);
+}
 .grid-table {
     position: relative;
     font-size: 16px;
